<resources>
    <string name="app_name">TakeMyOrder</string>
    <string name="title_activity_restaurants">TakeMyOrder Map</string>

    <!--Content Descriptions-->
    <string name="content_description_map">Find all restaurants</string>
    <string name="content_description_login">Login</string>
    <string name="content_description_fab_add_order">Add new food or drink to your order</string>
    <string name="content_description_fab_open_barcode">Open an archived QR-Code</string>
    <string name="content_description_call_waiter">Call a waiter</string>
    <string name="content_description_delete_order">Delete the current order</string>
    <string name="content_description_checkout_order">Procede to the checkout of your order</string>
    <string name="content_description_log_out">Log out from the system</string>
    <string name="content_description_food_image">Image with the current food</string>
    <string name="content_description_menu_icon">Procede to your order summary</string>
    <string name="content_description_meals_number">Number of meals in current order</string>
    <string name="content_description_add_to_favourite">Add or remove this food from the favourites meals of this restaurant</string>
    <string name="content_description_favourites">Show favourites foods</string>
    <string name="content_description_pay">Procede to the payment for your order</string>
    <string name="content_description_background">Background app image</string>
    <string name="content_description_receipt">Background of order checkout</string>
    <string name="content_description_scan_barcode">Active the camera to start the barcode capture</string>
    <string name="content_description_dish_description">Image of the slected food</string>
    <string name="content_description_logo">Logo of the application</string>
    <string name="content_description_notepad_background">Background of current order list</string>
    <string name="content_description_restaurant_image">Restaurant image</string>
    <string name="content_description_restaurant_review_profile">Photo of the profile who lives the review</string>
    <string name="content_description_waiter_accept_request">Waiter click this image to accept the request</string>

    <!--Errors-->
    <string name="error_retrieving_restaurant_details">Error retrieving restaurant detail</string>
    <string name="error_places_api_key_not_provided">No Places API KEY provided</string>
    <string name="error_no_barcode_found">Barcode not found</string>
    <string name="error_no_valid_information_from_barcode">Error trying to extrapolating information from barcode</string>
    <string name="error_loading_bitmap">QR-COde reading error</string>
    <string name="error_invalid_id_restaurant">Invalid ID restaurant</string>
    <string name="no_food_selected">No food selected</string>

    <!--Scan QRCode activity-->
    <string name="scan_barcode_description">Frame with your camera the QR-Code at your table or open an existing image</string>

    <!--Customer Main Activity-->
    <string name="order_something">Order something</string>
    <string name="delete_current_order">Delete current order</string>
    <string name="call_waiter">Call a waiter</string>
    <string name="checkout_order">Checkout order</string>
    <string name="log_out">Log out</string>
    <string name="favourites">Favourites</string>
    <string name="total_price">%1$.2f €</string>
    <string name="table_number">Table: %1$s</string>
    <string name="confirm_delete_title">Confirm delete</string>
    <string name="confirm_delete_text">Confirm delete of current order?</string>
    <string name="confirm_delete_meal_text">Confirm to remove the selected meal?</string>
    <string name="confirm_call_waiter_title">Confirm call waiter</string>
    <string name="confirm_call_waiter_text">Confirm the call to a waiter?</string>
    <string name="call_to_waiter_submitted">Call to waiter submited, please be patient, a member of the stuff will be at your table as soon as possible</string>

    <!--Checkout order-->
    <string name="pay">Pay order</string>
    <string name="total">Total:</string>
    <string name="confirm_payment_title">Confirm payment</string>
    <string name="confirm_payment_text">Do you confirm the payment for the current order?</string>
    <string name="submitting_order">Submitting order</string>
    <string name="order_submitted">Order has been submitted</string>
    <string name="nothing_on_current_order">The current order is empty</string>
    <string name="receipt_header">RECEIPT</string>

    <!--Barcode Scanner Activity-->
    <string name="open_barcode_from_file">Open QR from image</string>

    <!--Restaurant Details-->
    <string name="restaurant_rating">Rating:</string>

    <!--Restaurant Menu-->
    <string name="no_food_for_this_category">No food on this category</string>
    <string name="starter_dishes">Starter dishes</string>
    <string name="main_dishes">Main dishes</string>
    <string name="side_dishes">Side dishes</string>
    <string name="desserts">Desserts</string>
    <string name="drinks">Drinks</string>
    <string name="add_to_order">ADD TO ORDER</string>
    <string name="show_details">DETAILS</string>
    <string name="subtract_food">-1</string>
    <string name="menu">Menu</string>

    <!--Waiter Activity-->
    <string name="waiter_main_title">TakeMyOrder - Waiter: %1$s</string>
    <string name="waiter_ready_orders">Ready orders</string>
    <string name="waiter_calls">Customer\'s calls</string>
    <string name="waiter_calls_not_present">There isn\'t any request</string>
    <string name="waiter_order_ready_not_present">No ready orders</string>
    <string name="waiter_call_text">There is a request at table: %1$s</string>
    <string name="waiter_order_ready_text">There is an order ready for table: %1$s</string>
    <string name="waiter_new_waiter_call">New waiter call received</string>
    <string name="waiter_new_order_ready">New ready order</string>
    <string name="waiter_notification_channel_name">Waiter attention request</string>
    <string name="waiter_notification_channel_description">Required attention for waiter when there is a call or a order is ready to be token from kitchen</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="waiter_not_logged">No waiter logged in, please log in.</string>

    <!--Widget-->
    <string name="no_favourites">No favourites selected for current user</string>

</resources>
