...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.udacity.thefedex87.takemyorder.ui.fragments.CurrentOrderListFragment" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_to_order_fab"
        android:layout_width="@dimen/fab_width"
        android:layout_height="@dimen/fab_height"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:elevation="@dimen/fab_elevation"
...
