...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                    <TextView
                        android:id="@+id/activity_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        style="@android:style/TextAppearance.Material.Widget.ActionBar.Title"/>
                </RelativeLayout>

...
