...
        app:layout_constraintTop_toBottomOf="@id/app_bar_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/receipt_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/receipt_bg"
            android:contentDescription="@string/content_description_receipt"/>

...
